--- a/index.html
+++ b/index.html
@@ -155,6 +155,41 @@
       </div>
     </div>
   </div>
+  <hr>
+  <nav class="text-xs-center">
+    <ul class="pagination">
+        <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+            </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li>
+        <li class="page-item"><a class="page-link" href="#">5</a></li>
+        <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+            </a>
+        </li>
+    </ul>
+</nav>
+<div class="container2">
+  
+<form action=”” method=”post”>
+    <!--<label for="Comments">Comments</label>-->
+
+  <teaxtarea name=”#”><strong>Comment</strong></textarea>
+    <input type=”submit”>
+
+  <button type="button" class="btn btn-outline-primary">Submit</button>
+  
+  </form>
+
+</div>
 
   <!-- start footer Area -->
   <footer class="footer-area section-gap">
@@ -198,7 +233,6 @@
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-dribbble"></i></a>
-
               <a href="https://goo.gl/maps/zwpGESCxCfyhtnPg7"><i class="fa fa-map-marker" aria-hidden="true"></i></a>
             </div>
           </div>
