--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
 </nav>
 <div class="container2">
   
-<form action=”” method=”post”>
-    <!--<label for="Comments">Comments</label>-->
+<form>
+    <label id="Comments">Comments</label>
 
-  <teaxtarea name=”#”><strong>Comment</strong></textarea>
+  
     <input type=”submit”>
 
   <button type="button" class="btn btn-outline-primary">Submit</button>
