readme-file-modified

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
 <body>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
+  
+  <!--Start Header -->
   <header class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
@@ -61,9 +60,11 @@
         </form>
       </div>
     </nav>
+    </header>
+    <!--Header ends-->
+    
 
-  </header>
-
+    <!-- start carousel -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -90,6 +91,8 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+  <!--carousel ends-->
+  <!--jumbotron starts-->
   <section class="jumbtron-section">
     <div class="jumbotron">
       <h1 class="display-6"> ABOUT HOTEL</h1>
@@ -110,20 +113,25 @@
               <h4 class="modal-title"><i class="fa fa-users" aria-hidden="true"></i>ABOUT HOTEL</h4>
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
+            <!--model header ends-->
             <!-- modal body-->
             <div class="modal-body">
               <a href="#">sign-in / Login !</a>
             </div>
-            <!--modal footer-->
+            <!--model body ends-->
+
+            <!--model footer-->
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" data-dismiss="modal">close</button>
             </div>
+           <!--model footer ends-->  
           </div>
         </div>
       </div>
     </div>
   </section>
-
+  <!--jumbotron ends-->
+  <!--grid system-->
   <div class="container">
     <div class="row">
       <div class="col-sm">
@@ -155,41 +163,46 @@
       </div>
     </div>
   </div>
+  <!--grid system ends-->
   <hr>
+  <!--tabbed pane-->
   <nav class="text-xs-center">
     <ul class="pagination">
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-                <span class="sr-only">Previous</span>
-            </a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">4</a></li>
-        <li class="page-item"><a class="page-link" href="#">5</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-                <span class="sr-only">Next</span>
-            </a>
-        </li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+          <span class="sr-only">Previous</span>
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">4</a></li>
+      <li class="page-item"><a class="page-link" href="#">5</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
     </ul>
-</nav>
-<div class="container2">
-  
-<form>
-    <label id="Comments">Comments</label>
+  </nav>
+  <!--tabbed pane ends-->
+  <!--comment box-->
+  <div class="container2">
 
-  
-    <input type=”submit”>
+    <form>
+      <label id="Comments">Comments</label>
 
-  <button type="button" class="btn btn-outline-primary">Submit</button>
-  
-  </form>
 
-</div>
+      <input type=”submit”>
+
+      <button type="button" class="btn btn-outline-primary">Submit</button>
+
+    </form>
+
+  </div>
+  <!--comment box ends-->
 
   <!-- start footer Area -->
   <footer class="footer-area section-gap">
@@ -214,9 +227,9 @@
                 method="get" class="form-inline">
                 <input class="form-control" name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''"
                   onblur="this.placeholder = 'Email Address'" required="" type="email">
-                  <div class="primary">
-                <button type="button" class="btn btn-outline-primary">Submit</button>
-              </div>
+                <div class="primary">
+                  <button type="button" class="btn btn-outline-primary">Submit</button>
+                </div>
                 <div style="position: absolute; left: -5000px;">
                   <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
                 </div>
