--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <meta name="keywords" content="rooms,food,ac room, gym">
+  <!-- add meta description -->
+  <meta name="description" content="a website for hotel">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
@@ -12,13 +15,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>HOTEL</title>
+  <title>hotel</title>
 </head>
-
+<main>
 <body>
-
-  
-  <!--Start Header -->
+<!--Start Header -->
   <header class="fixed-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
@@ -28,8 +29,7 @@
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -52,7 +52,6 @@
               <a class="dropdown-item" href="#">zomato</a>
             </div>
           </li>
-
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -62,9 +61,8 @@
     </nav>
     </header>
     <!--Header ends-->
-    
-
     <!-- start carousel -->
+    <section class="carousel-section">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -91,13 +89,13 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+</section>
   <!--carousel ends-->
   <!--jumbotron starts-->
   <section class="jumbtron-section">
     <div class="jumbotron">
-      <h1 class="display-6"> ABOUT HOTEL</h1>
-
-      <hr class="my-4">
+      <h1 class="display-6"> about hotel</h1>
+   <hr class="my-4">
       <p>The hotel is conveniently located close to the business district of Bangalore,
         It is located 13 kms from the airport and is 5 kms from the city centre.
         The 186 bedroom hotel provides rooms with an ensuite,
@@ -110,7 +108,7 @@
           <div class="modal-content">
             <!--modal header-->
             <div class="modal-header">
-              <h4 class="modal-title"><i class="fa fa-users" aria-hidden="true"></i>ABOUT HOTEL</h4>
+              <h4 class="modal-title"><i class="fa fa-users" aria-hidden="true"></i>about hotel</h4>
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <!--model header ends-->
@@ -149,8 +147,7 @@
           just in front of the hotel guests can find a public bus stop with lines to the centre of Ljubljana,
           6 km away, where the Main Bus and Train Station is located.
           Krvavec ski slopes and Ljubljana Airport can be found in a 20 km radius.
-
-        </p>
+     </p>
       </div>
       <div class="col-sm">
         <img src="img/corinthia-hotel-tripoli-gym.jpg" class="card-img-top" alt="first-slide">
@@ -165,7 +162,7 @@
   </div>
   <!--grid system ends-->
   <hr>
-  <!--tabbed pane-->
+ <article class="pane">
   <nav class="text-xs-center">
     <ul class="pagination">
       <li class="page-item">
@@ -187,40 +184,27 @@
       </li>
     </ul>
   </nav>
-  <!--tabbed pane ends-->
-  <!--comment box-->
+ </article>
+ 
   <div class="container2">
-
     <form>
       <label id="Comments">Comments</label>
-
-
-      <input type=”submit”>
-
-      <button type="button" class="btn btn-outline-primary">Submit</button>
-
-    </form>
-
-  </div>
-  <!--comment box ends-->
-
-  <!-- start footer Area -->
+<input type=”submit”>
+<button type="button" class="btn btn-outline-primary">Submit</button>
+</form>
+</div>
+<!-- start footer Area -->
   <footer class="footer-area section-gap">
     <div class="container">
       <div class="row">
         <div class="col-lg-5 col-md-6 col-sm-6">
           <div class="single-footer-widget">
             <h6>About Us</h6>
-            <p>
-              'Good Food Gives You good Mood' <br />
-              'Good Mood Brings Better Result'
-            </p>
           </div>
         </div>
         <div class="col-lg-5  col-md-6 col-sm-6">
           <div class="single-footer-widget">
-
-            <p>Stay update with our latest</p>
+             <p>Stay update with our latest</p>
             <div class="" id="mc_embed_signup">
               <form target="_blank" novalidate="true"
                 action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
@@ -263,12 +247,6 @@
     </div>
   </footer>
   <!-- End footer Area -->
-
-
-
-
-
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -278,10 +256,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
-
-
-
 </body>
-
+</main>
 </html>
