html-file- modified

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
   </div>
   <!--grid system ends-->
   <hr>
+  <!--tabbed pane-->
  <article class="pane">
   <nav class="text-xs-center">
     <ul class="pagination">
